# cloggen

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  about.hbs  about.toml  env-windows.sh  mnenje.json  ocena.csv  odzivi.json
.github/workflows/: rust.yml
data/: mnenje.tex  predloga.sty
src/: compiler.rs  config.rs  create.rs  fs.rs  gui.rs  macros.rs  main.rs  merge.rs  preproc.rs
