[package]
name = "cloggen"
version = "1.3.0"
edition = "2021"
license = "MIT"

[dependencies]
tectonic = {version = "0.15.0", features=["external-harfbuzz"]}
clap = { version = "4.5.20", features = ["derive"] }
encoding_rs = "0.8.35"
serde_json = "1.0.132"
csv = "1.3.0"
rand = "0.8.5"
glob = "0.3.2"
