[package]
name = "cloggen"
version = "1.4.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
encoding_rs = "0.8.35"
serde_json = "1.0.132"
csv = "1.3.0"
rand = "0.8.5"
glob = "0.3.2"
tectonic = { version = "0.15.0", features = ["external-harfbuzz"] }
egui = {version = "0.33.0", optional = true}
eframe = {version = "0.33.0", optional = true}
rfd = {version  = "0.15.4", optional = true}
open = "5.3.2"

[features]
gui = ["dep:egui", "dep:eframe", "dep:rfd"]
default = ["gui"]
