[package]
name = "cloggen"
version = "1.4.0"
edition = "2024"
license = "MIT"
rust-version = "1.88"
description = "Utility for automatic opinion generation for habilitation reports of the Student Council FE UL (ŠSFE)."
authors = [
    "David Hožič"
]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
encoding_rs = "0.8.35"
serde_json = "1.0.132"
csv = "1.3.0"
rand = "0.8.5"
glob = "0.3.2"
tectonic = { version = "0.15.0", features = ["external-harfbuzz"] }
egui = {version = "0.33.0", optional = true}
eframe = {version = "0.33.0", optional = true}
rfd = {version  = "0.15.4", optional = true}
open = {version = "5.3.2", optional = true}
anyhow = "1.0.100"
egui_extras = { version = "0.33.0", features = ["gif", "http"] }

[features]
gui = ["dep:egui", "dep:eframe", "dep:rfd", "dep:open"]
default = ["gui"]
